kustomize/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oidc-db
  labels:
    app: oidc-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oidc-db
  template:
    metadata:
      labels:
        app: oidc-db
    spec:
      containers:
        - name: postgresql
          image: localhost:32000/oidc-db
          ports:
            - containerPort: 5432
          volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: postgres-volume
      volumes:
        - name: postgres-volume
          persistentVolumeClaim:
            claimName: oidc-provider-claim
