kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oidc-provider
  labels:
    app: oidc-provider
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oidc-provider
  template:
    metadata:
      labels:
        app: oidc-provider
    spec:
      containers:
        - name: hydra
          image: localhost:32000/hydra:latest
          ports:
            - containerPort: 4444
            - containerPort: 4445
            - containerPort: 5555 #TODO: remove?
          command: ["hydra"]
          args: ["serve","-c", "/etc/config/hydra/hydra.yml","all","--dangerous-force-http"]
        - name: oidc
          image: localhost:32000/oidc:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
