kustomize/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oidc-admin
spec:
  selector:
    app: oidc-provider
  ports:
    - protocol: TCP
      name: hydra-admin
      port: 80
      targetPort: 4445
